--- a/JS-Back-End/Cubicle/03. Cubicle-Workshop-Part-1-Resources/views/attachAccessory.hbs
+++ b/JS-Back-End/Cubicle/03. Cubicle-Workshop-Part-1-Resources/views/attachAccessory.hbs
@@ -3,6 +3,7 @@
     <div class="form">
         <h2>{{cube.name}}</h2>
         <img class="cube" src="{{cube.imageUrl}}">
+        {{#if accessories.length}}
         <form action="/accessory/attach" method="post">
             <label for="accessory">Accessories</label>
             <select id="accessory" name="accessory" />
@@ -11,11 +12,9 @@
             {{/each}}
             </select>
             <input type="hidden" , name="cubeId" value="{{cube._id}}">
-            {{#if accessories.length}}
             <input type="submit" value="Attach">
-            {{/if}}
         </form>
-        {{#if cube.accessories.length}}
+        {{else}}
         <h3 class="italic">This cube has all available accessories so far or there is no available at all...</h3>
         {{/if}}
         <a class="btn" href="/cube/details/{{cube._id}}">Back</a>
