Exam 14.12.21 done without bonus- JS Web

--- a/JS-Back-End/Exam14dec21/exam/views/layouts/main.hbs
+++ b/JS-Back-End/Exam14dec21/exam/views/layouts/main.hbs
@@ -28,9 +28,9 @@
             <a href="/">ArtGallery</a>
 
             <ul class="menu">
-                <li><a href="#">Gallery</a></li>
+                <li><a href="/gallery">Gallery</a></li>
                 {{#if user}}
-                <li><a href="#">Create Publication</a></li>
+                <li><a href="/publication/create">Create Publication</a></li>
                 <li><a href="#">Profile</a></li>
                 <li><a href="/user/logout">Logout</a></li>
                 {{else}}
