--- a/JS-Back-End/Exam14dec21/exam/views/layouts/main.hbs
+++ b/JS-Back-End/Exam14dec21/exam/views/layouts/main.hbs
@@ -31,7 +31,7 @@
                 <li><a href="/gallery">Gallery</a></li>
                 {{#if user}}
                 <li><a href="/publication/create">Create Publication</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="/profile">Profile</a></li>
                 <li><a href="/user/logout">Logout</a></li>
                 {{else}}
                 <li><a href="/user/login">Login</a></li>
