Exam Shred Trip Done - JS Web

--- a/JS-Back-End/Exam17June22/exam/views/housing/details.hbs
+++ b/JS-Back-End/Exam17June22/exam/views/housing/details.hbs
@@ -7,7 +7,7 @@
             <div class="product-info">
                 <div class="product-text">
                     <div class="product-text">
-                        <h1>Name: {{element.ame}}</h1>
+                        <h1>Name: {{element.name}}</h1>
                         <h2>Type: {{element.type}}</h2>
                         <h4>Year: {{element.year}}</h4>
                         <h4>City: {{element.city}}</h4>
