--- a/JS-Back-End/Exam25June2022/exam/views/user/login.hbs
+++ b/JS-Back-End/Exam25June2022/exam/views/user/login.hbs
@@ -1,29 +1,24 @@
 <main>
+    <!-- In case of error, you should display div with class "errorContainer" -->
+    <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
 
-    <section id="login-container">
-
-        <div class="container">
-            <!-- Do not forget to change the path to the image -->
-            <img src="/static/img/slider.jpg" alt="image">
-
-            <form action="/user/login" method="POST" class="container-text">
-                <h2>Login</h2>
-                <p>Welcome, see the new masterpieces!</p>
-
-                <label for="username">Username:</label>
-                <input type="text" id="username" placeholder="ivan_00" name="username">
-
-                <label for="password">Password:</label>
-                <input type="password" id="password" placeholder="*****" name="password">
-
-                <button class="login-btn">Login</button>
-                <div class="card-no-account">
-                    <p>Don't have an account? <a href="/user/register">Sign up</a>.</p>
-                </div>
-
-            </form>
+    {{#if error}}
+    <div>
+        <div class="errorContainer">
+            <div>{{error}}</div>
         </div>
+    </div>
+    {{/if}}
 
-    </section>
-
+    <div class="login-box">
+        <h1>Login</h1>
+        <form action="/user/login" method="POST">
+            <label>Email</label>
+            <input type="text" name="email" placeholder="Email..">
+            <label>Password</label>
+            <input type="password" name="password" placeholder="Password..">
+            <input type="submit" value="Submit">
+        </form>
+        <p>Not have an account? <a href="/user/register">Register here</a></p>
+    </div>
 </main>
